# project-trudy-km-telegram

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
config/: config.yaml
docs/: BACKLOG.md  CHANGELOG.md  CLI_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  LEARNINGS.md  QUICK_START.md  README.md  ROADMAP.md  USAGE.md  requirements_01.md  requirements_02.md  requirements_03.md  requirements_04.md  requirements_05.md
src/: main.py
src/ai/: claude_summarizer.py  ocr.py  ollama_summarizer.py  summarizer.py  tagger.py  transcriber.py
src/cli/: discover.py  fetch.py  main.py  process.py  status.py  sync.py  utils.py
src/core/: config.py  logger.py  processor.py  state.py
src/markdown/: formatter.py  processed_writer.py  staging_reader.py  staging_writer.py  writer.py
src/processors/: audio_video.py  base.py  link.py  media.py  text.py  youtube.py
src/telegram/: client.py  downloader.py  fetcher.py
src/utils/: article_extractor.py  checksum.py  datetime_utils.py  file_utils.py  youtube_utils.py
tests/: conftest.py  test_checksum.py  test_cli.py  test_integration.py  test_staging_markdown.py  test_state.py
